<resources>
    <string name="app_name">Anime Scrap</string>
    <!--  Fragments  -->
    <string name="title_trending">Trending</string>
    <string name="title_latest">Latest</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="anime_details_title">Anime Details</string>
    <!--  Player  -->
    <string name="play_button_text">Play</string>
    <string name="prev_button_text">Forward</string>
    <string name="next_button_text">Rewind</string>
    <string name="quality_btn_txt">Auto</string>
    <string name="rotate_display">rotate display</string>
    <string name="display_scale">Display scale</string>
    <string name="unlock">unlock</string>
    <string name="zoom">ZOOM</string>
    <string name="stretched">STRETCHED</string>
    <string name="height_fit">FIT</string>
    <string name="_0_00">0:00</string>
    <string name="timer_bar">timer bar</string>

    <string name="favourite_button_text">Favorite</string>
    <string name="imageview_in_main">ImageView in Main</string>

    <string name="splash_c2_image">Splash C2 Image</string>

    <string name="image_title">IMAGE TITLE</string>
    <string name="cover_of_anime">coverOfAnime</string>
    <string name="synopsis_header_title">Synopsis:</string>
    <string name="not_started_yet">Not Started Yet</string>
    <string name="select_episode">Select Episode</string>
    <string name="episode">Episode %1$s</string>
    <string name="last_watched_format">Last Watched: %1$s</string>
    <string name="episode_text">%1$s - %2$s</string>
    <string name="loading_episode">Loading Episode</string>
    <string name="speed">%1$sx</string>
    <string name="back_to_home">back to home</string>


    <!-- Preference Titles -->
    <string name="settings">Settings</string>
    <string name="mx_player_summary">Will only work if you have MX Player installed on your device</string>
    <string name="mx_player_title">Use MX player</string>
    <string name="external_player_off_summary">Using internal player</string>
    <string name="external_player_on_summary">Using external player</string>
    <string name="external_player_title">Use external video player</string>
    <string name="dynamic_colors_disabled_summary">Dynamic colors disabled</string>
    <string name="dynamic_colors_enabled_summary">Dynamic colors enabled</string>
    <string name="dynamic_colors_title">Use dynamic colors</string>
    <string name="source_cat_title">Source</string>
    <string name="source_list_pref_title">Select Source</string>
    <string name="pip_disabled">Picture-in-picture disabled</string>
    <string name="pip_enabled">Picture-in-picture enabled</string>
    <string name="pip_title">Enable PiP</string>
    <string name="theme_cat_title">Theme</string>
    <string name="player_cat_title">Player</string>

    <string name="seek_seconds_forward">+%d seconds</string>
    <string name="seek_seconds_backward">-%d seconds</string>

    <string name="anime_details_error_message">Something went wrong, unable to connect to the server. Please check your network connection</string>
    <string name="no_favorites_text">Your Favorites will show here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">Player</string>
    <string name="dark_mode_pref_title">Dark Mode</string>
    <string name="update_available">Update Available</string>
    <string name="update_not_available">No Update Available</string>
    <string name="downloading_update">Downloading Update</string>
    <string name="check_update_pref_summary">Check for newer version of the app</string>
    <string name="check_update_pref">Check for updates</string>
    <string name="sort">Sort</string>
    <string name="video_cache_perf_title">Enable Video Cache</string>
    <string name="video_cache_perf_summray_disabled">Video cache disabled in player</string>
    <string name="video_cache_perf_summray_enabled">Video cache enabled in player</string>
    <string name="auto_play_summary">Autoplay next episode when the current episode ends</string>
    <string name="auto_play_title">Autoplay next episode</string>
    <string name="press_back_again_in_player">Press Back Again to Exit Player</string>

</resources>