<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/select_fav"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_latest"
        android:icon="@drawable/ic_latest_black_24"
        android:title="@string/title_latest" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_trending_black_24"
        android:title="@string/title_trending" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>